feat: 단일 주문 조회 api 및 시나리오